# ProjectDungeonDespoiler

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Readme.md  conandata.yml
.github/workflows/: cmake-multi-platform.yml  release.yml
cmake/: mingw-linux-windows.cmake
src/: main.cpp
src/Creatures/: CreatureLoader.cpp  CreatureLoader.h
src/Engine/: BattleMaster.cpp  BattleMaster.h  Creature.cpp  Creature.h  CreatureCollection.cpp  CreatureCollection.h  CreatureLoader.cpp  CreatureLoader.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Items.h  ItemsCollection.cpp  ItemsCollection.h  Math.h  Player.cpp  Player.h  RandomGenerator.cpp  RandomGenerator.h  Scene.cpp  Scene.h  Screen.h  ScreenManager.cpp  ScreenManager.h  Stats.h
src/Engine/Items/: Sword.cpp
src/Engine/Screens/: Battle.cpp  Battle.h  EndMenu.cpp  EndMenu.h  MainMenu.cpp  MainMenu.h  Map.cpp  Map.h
src/Utils/: Game.cpp  Game.h
